Fixed Header entries

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,18 @@
                         >
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="https://www.beg.ch/brown/website_bw/pages/woist/"
+                        >Wo ist?</a
+                        >
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'chat' %}"
                             >NöldekeGPT</a
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.beg.ch/brown/website_bw/pages/woist/"
-                            >Wo ist?</a
+                        <a class="nav-link" href="https://beg.ch/brown/website_bw/pages/abreiseCheckliste/"
+                            >Abreise Checkliste</a
                         >
                     </li>
                     <li class="nav-item">
