--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg">
+            <div class="navbar-left">
+                <img src="{% static 'favicon.png' %}" alt="Description of Image" style="height: 40px;">
+            </div>
             <button
                 class="navbar-toggler"
                 type="button"
